--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "mysql2": "^3.9.1",
+    "nodemon": "^3.0.3",
     "sequelize": "^6.36.0"
   }
 }
